# command-generator

./: Cargo.toml  Makefile  README.ja.md  README.md
.github/workflows/: release.yml
src/: app.rs  cli.rs  clipboard.rs  command_validation.rs  history.rs  lib.rs  llm.rs  main.rs  meta.rs  model.rs  output.rs  paths.rs  prompt.rs  prompter.rs  session.rs  validation.rs
src/bootstrap/: mod.rs  model_list.rs  runtime_setup.rs
src/bootstrap/resolver/: default.rs  mod.rs
src/interactive/: mod.rs  stdio_loop.rs  tty_loop.rs
src/llm/: api_error.rs  mod.rs  tools.rs
src/llm/parse/: mod.rs  normalize.rs  text.rs
src/llm/providers/: claude.rs  gemini.rs  mod.rs  openai.rs  shared.rs
src/meta/: cache.rs  mod.rs
src/meta/fetch/: claude.rs  error.rs  gemini.rs  mod.rs  openai.rs
src/model/: mod.rs  provider_kind.rs
src/model/resolver/: env.rs  key.rs  mod.rs  selection.rs  types.rs
src/postprocess/: alias_prefix.rs  and_or.rs  mod.rs
src/postprocess/echo_default/: mod.rs  normalize.rs  split.rs  words.rs
src/prompts/: system_prompt.tera  user_prompt.tera
src/request_engine/: command_handler.rs  committer.rs  gateway.rs  guards.rs  mod.rs  orchestrator.rs  prompt_context.rs  question_handler.rs  state.rs  types.rs
src/session/: mod.rs  recent.rs  record.rs  store.rs  time.rs
src/validation/: mod.rs  report.rs  runtime.rs  tests.rs  types.rs  validate.rs
src/validation/parser/: cd_checks.rs  mod.rs  placeholders.rs  segments.rs
src/validation/parser/tokens/: head.rs  mod.rs  (+1 more)
src/validation/shell_checks/: alias_normalize.rs  detect.rs  mod.rs
